# library-analysis

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
src/: analysis.py  data_ingestion.py  data_loader.py  data_preprocessor.py
tests/: test_analysis.py  test_data_loader.py  test_data_preprocessor.py
