[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.3"
matplotlib = "^3.9.2"
ace-tools = "^0.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
sns = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
